# regulatory-change-impact-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly.yml
assessments/: README.md  ai-model-governance.md  automated-decisioning.md  third-party-ai.md
docs/adr/: 0001-deterministic-pipeline.md  0002-scope-detection-precedes-mapping.md  0003-shared-controls-priced-once.md  0004-criticality-does-not-promote.md
examples/: inventory.yaml
examples/regulations/: README.md  ai-model-governance.txt  automated-decisioning.txt  third-party-ai.txt
scripts/: agent.py
src/rcia/: __init__.py  cli.py  extract.py  impact.py  inventory.py  models.py  orchestrator.py  plan.py  render.py  scope.py  taxonomy.py
tests/: conftest.py  test_extract.py  test_impact.py  test_inventory.py  test_pipeline.py  test_scope.py
