[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regulatory-change-impact-agent"
version = "0.1.0"
description = "Deterministic regulatory impact mapping and remediation planning for regulated engineering organizations"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
rcia = "rcia.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rcia"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]